# Auto_job_applier_linkedIn

./: PROJECT_CHANGES.md  pyproject.toml  runAiBot.py
.chrome-profile/: Local State
.chrome-profile/Crashpad/: metadata
.chrome-profile/Default/: BrowsingTopicsState  DIPS  DIPS-wal  Favicons  History  History-journal  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Shortcuts  Top Sites  Web Data  passkey_enclave_state
.chrome-profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  f_000011  f_000012  f_000013  f_000014  f_000015  f_000016  f_000017  index
.chrome-profile/GraphiteDawnCache/: data_1  index
.chrome-profile/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13421557714071178  ChromeExtMalware.store.32_13422095128945230  UrlBilling.store  UrlBilling.store.4_13421559329721471  UrlBilling.store.4_13421561017103274  UrlBilling.store.4_13422109655273221  UrlBilling.store.4_13422299372196970  UrlCsdAllowlist.store  UrlCsdAllowlist.store.4_13421557714078343  UrlCsdAllowlist.store.4_13422098779576253  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlMalBin.store  UrlMalware.store  (+24 more)
config/: personals.py  questions.py  search.py  secrets.py  settings.py
modules/: clickers_and_finders.py  helpers.py  open_chrome.py  validator.py
resume/: resume_zhibi_liu.html  resume_zhibi_liu_en.html
scripts/: generate_english_resume_pdf.py  generate_resume_pdfs.py
(+1186 files in other folders)
