[project]
name = "auto-job-applier-linkedin"
version = "0.1.0"
description = "LinkedIn Easy Apply automation tool configured for local uv environment management."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "fpdf>=1.7.2",
    "google-generativeai>=0.8.0",
    "openai>=1.0.0",
    "pyautogui>=0.9.54",
    "python-docx>=1.1.0",
    "selenium>=4.20.0",
    "setuptools>=69.0.0",
    "undetected-chromedriver>=3.5.5",
]

[tool.uv]
package = false
